# Open-COBOL-ESQL

./: .gitignore  .gitpod.yml  AUTHORS  ChangeLog  Dockerfile  Makefile.am  Makefile.in  NEWS  README  README_JPN  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  docker-compose.yml  libtool  warning_issue
.github/: dependabot.yml
.github/workflows/: check-workflows.yml  codeql.yml  demo.yml  docker-compose.yml  docker.yml  main.yml  postgresql  postgresql.yml  ubuntu-test.yml
.github/workflows/test-settings/: cobol_runner.sh  embed_db_info.sh
.github/workflows/ubuntu-test-settings/: atlocal  embed_db_info.sh
build_aux/: bootstrap
copy/: ChangeLog  Makefile.am  Makefile.in
dblib/: ChangeLog  Makefile.am  Makefile.in  ocdb.c  ocdb.h  ocdblog.c  ocdblog.h  ocdbutil.c  ocdbutil.h  ocesql.c  ocesql.h  ocpgsql.c  ocpgsql.h
ocesql/: ChangeLog  Makefile.am  Makefile.in  define.h  errorfile.c  errorfile.h  main.c  ocesql.c  ocesql.h  ocesqlutil.c  ocesqlutil.h  parser.c  parser.h  parser.y  ppout.c  scanner.c  scanner.l
sample/: ChangeLog  FETCHTBL.cbl  INSERTTBL.cbl  Makefile.am  Makefile.in
tests/: Dockerfile  Makefile  README.md  atlocal  basic  basic.at  cobol_data  cobol_data.at  embed_db_info.sh  embed_db_info_docker.sh  generate_testcase_sql_type.py  misc  misc.at  package.m4  sql_data  sql_data.at  sqlca  sqlca.at
tests/basic.dir/07/: prog.cbl  prog.cob  run
tests/basic.dir/10/: prog.cbl  prog.cob  result.txt  run
tests/basic.src/: commit-rollback.at  connect-disconnect.at  declare.at  delete.at  fetch.at  include.at  insert.at  open-close.at  other-sql.at  prepare-execute.at.org  sample.at  select.at  update.at  update.at.org
tests/cobol_data.dir/1/: prog.cbl  prog.cob  run
tests/cobol_data.src/: alphanumeric.at  comp5.at  japanese.at  numeric_signed_trailing_v.at  numeric_signed_v.at  numeric_v.at  varying.at
tests/misc.src/: compile.at  empty-string.at
tests/sql_data.src/: sql_type.at
tests/sqlca.dir/2/: prog.cbl  prog.cob  run
tests/sqlca.dir/4/: prog.cbl  prog.cob  run
tests/sqlca.src/: connect-disconnect.at  insert-select-update-delete.at  open-fetch-close.at  prepare-execute.at
win32/: ocesql.sln
win32/libocesql/: libocesql.vcxproj  libocesql.vcxproj.filters
win32/ocesql/: ocesql.vcxproj  ocesql.vcxproj.filters
